udated lineitem id to string; updated createBudget, getBudget (using id from JWT)
